feat(ui): render opportunities as moon pass cards
Adds pass-level opportunity grouping for #51, compact pass recommendation cards, combined altitude/azimuth path rendering, and the UI experiment-history guideline.